# irishlab

./: .gitignore  .pre-commit-config.yaml  .sourceignore  LICENSE  README.md  Taskfile.yml  renovate.json  sensitive.yml
.config/: .ansible-lint.yml  .markdown-lint.yml  .markdownlint.yml  .yamllint.yml
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yaml  labeler.yml  labels.yaml  labels.yml  release.yml  renovate.json  settings.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  question.md
.github/workflows/: ansible-lint.yml  cd.yml  ci.yml  cron.yml  flux.yml  linting.yml  main.yml  meta-labeler.yml  meta-sync-labels.yaml  meta-sync-labels.yml  pr.yml  pre-commit.yml  runner-ansible.yml  runner-dns.yml  runner-tf.yml
.taskfiles/: ansible.yml  bfg.yml  docker.yml  k8s.yaml  kind.yml  pre-commit.yml
ansible/: docker.yml  k3s-deploy.yml  pbs.yml  pikvm.yaml  proxmox.yml  pve.yml  setup.yml  workstation.yml
ansible/collections/: requirements.yml
ansible/inventory/: hosts.yml
docker/ansible-semaphore/: docker-compose.yml
docker/demo/pyapp/: Dockerfile  pyproject.toml
docker/demo/pyapp/pyapp/: app.py
docker/homepager/: docker-compose.yml
docker/netbootxyz/: docker-compose.yml
docker/pihole-unbound-vpn/: docker-compose.yml
docs/: chezmoi.md  cloud-image.md  coral.md  flux.md  gitops.md  igpu.md  k3s-0.md  k3s.md  proxmox.md  rsync.md  ssh.md  traefik.md  vm.md  workstation.md
infra/cloudinit/: meta-data.yml  network-config  network-config.yml  user-data  user-data.yml
scripts/: spinner  test
(+455 files in other folders)
