[tool.poetry]
name = "pyapp"
version = "0.1.0"
description = ""
authors = ["Simon HARVEY <simon.harvey.86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
